Make outputting non-continuous durations possible during problem generation